# opencv-cc

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
opencv-cc-core/: Cargo.toml  build.rs
opencv-cc-core/src/: lib.rs
opencv-cc-core/src/cpp/: wrapper.cc  wrapper.h
opencv-cc-main/: Cargo.toml
opencv-cc-main/src/: main.rs
src/: main.rs  wrapper.rs
src/cpp/: wrapper.cc  wrapper.h
